--- a/client/src/components/lists.css
+++ b/client/src/components/lists.css
@@ -6,9 +6,13 @@
 .avatar {
     position: relative;
     display: inline-block;
-    border-left: 4px solid #fff;
+    border-radius: 3px;
+    box-shadow: -5px 0 5px -2px rgba(0,0,0,.5);
     overflow: hidden;
-    width: 100px;
+}
+
+.avatar:first-child {
+    box-shadow: 0px 0 0px 0px rgba(0,0,0,.6);
 }
 
 .avatar:not(:first-child) {
@@ -16,16 +20,7 @@
 }
 
 .avatar img {
-    width: 100%;
     height: 150px;
     display: block;
     transform: scale(-1, 1);
-}
-
-.avatar img :hover  {
-    border-left: 4px solid #f2f2f2;
-}
-
-.parent:hover img {
-    border-left: 4px solid #f2f2f2 !important;
 }
